# vda

./: README.md  build.rs  bulid.bat  ev init.txt
.github/workflows/: check-yt-dlp.yml  rust.yml  triger.yml
SPK_AP_TEMPLATE/: INFO  wizard.xml
SPK_AP_TEMPLATE/WIZARD_UIFILES/: install_uifile
SPK_AP_TEMPLATE/conf/: privilege
SPK_AP_TEMPLATE/scripts/: start-stop-status
old/: Uruchom serwer lokalny.bat  server.py  start_server.py
old/plugin/: background.js  dialog.html  popup.css  popup.html  popup.js
plugin/: content.js  manifest.json  queue.js  ui.js
plugin/_locales/pl/: messages.json
rast/: Cargo.toml  Spakuj_SPK.bat  build_all.ps1  build_spk.sh
rast/SPK_AP_TEMPLATE/: INFO
rast/SPK_AP_TEMPLATE/conf/: resource
rast/SPK_AP_TEMPLATE/scripts/: postinst
rast/plugin/: dialog.js  download.js  settings.js
rast/plugin/_locales/en/: messages.json
rast/src/: build.rs  dodatkowe_funkcje.rs  main.rs  models.rs  setup.rs
src/: api_handler.rs  main.rs  pobieracz.rs  setup.rs
