[package]
name = "vda_server"
version = "0.2.2-kol-mod-rast"
edition = "2021"

[build-dependencies]
winres = "0.1.12"

[dependencies]
actix-web = "=4.11.0"
actix-cors = "0.7.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
once_cell = "1.21.3"
time = { version = "0.3", features = ["local-offset"] }
tokio = { version = "1.49.0", features = ["rt-multi-thread", "macros", "fs"] }
dirs = "6.0.0"
rand = "0.9.2"
getrandom = { version = "0.3", features = ["std"] }




[target.'cfg(target_os = "windows")'.dependencies]
reqwest = { version = "0.13.1", default-features = false, features = ["rustls-no-provider"] }
winres = "0.1.12"

[target.'cfg(target_os = "linux")'.dependencies]
reqwest = { version = "0.13.1", features = ["blocking"] }




